# Futoshiki-CSP

./: .dockerignore  Dockerfile  LICENSE.md  README.md  compose.yaml  liara.json
Back-End/: .dockerignore  Dockerfile  README.md  main.py  optimized_backtrack.py  pyproject.toml  simple_backtrack.py  utils.py
Front-end/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
Front-end/src/: App.css  App.tsx  index.css
Front-end/src/components/: ConstraintButton.tsx  ControlPanel.tsx  Header.tsx  PuzzleGrid.tsx  ReportModal.tsx  Sidebar.tsx  SolutionSteps.tsx  Statistics.tsx  _index.ts
Front-end/src/components/UI/: animated-modal.tsx
Front-end/src/store/: futoshikiStore.ts  index.ts  timeline.ts
Front-end/src/utils/: puzzleSolver.ts
