[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Arman Akhoundy",email = "iarmanprog@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
